--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -53,6 +53,9 @@
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -142,9 +145,18 @@
     <Compile Include="Migrations\202204220622161_Modelsupdated.designer.cs">
       <DependentUpon>202204220622161_Modelsupdated.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202205291954270_ProductDB.cs" />
+    <Compile Include="Migrations\202205291954270_ProductDB.designer.cs">
+      <DependentUpon>202205291954270_ProductDB.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205292046267_UpDown.cs" />
+    <Compile Include="Migrations\202205292046267_UpDown.designer.cs">
+      <DependentUpon>202205292046267_UpDown.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\Comment.cs" />
+    <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Reply.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -152,6 +164,7 @@
     <Compile Include="ViewModels\PictureVM.cs" />
     <Compile Include="ViewModels\RegisterVM.cs" />
     <Compile Include="ViewModels\ReplyVM.cs" />
+    <Compile Include="ViewModels\VotingVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -175,6 +188,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\Site.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -194,6 +208,7 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Shared\_UserLayout.cshtml" />
     <Content Include="Views\User\UserProfile.cshtml" />
+    <Content Include="Views\Home\ProductList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -218,6 +233,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202204220622161_Modelsupdated.resx">
       <DependentUpon>202204220622161_Modelsupdated.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205291954270_ProductDB.resx">
+      <DependentUpon>202205291954270_ProductDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205292046267_UpDown.resx">
+      <DependentUpon>202205292046267_UpDown.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
